--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
@@ -34,6 +34,9 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {}
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "browserslist": [
     "> 1%",
